<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:icon="@drawable/ic_shield_lock"
        android:title="@string/permissions">

        <androidx.preference.Preference
            android:icon="@drawable/ic_components"
            android:key="dump_permission"
            android:title="@string/dump_permission" />

        <androidx.preference.Preference
            android:icon="@drawable/ic_settings"
            android:key="write_secure_settings"
            android:title="@string/write_secure_settings_permission" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/social">
        <androidx.preference.Preference
            android:icon="@drawable/twitter"
            android:title="Twitter">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://twitter.com/franciscof_1990" />
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>